# solver-service

./: .gitmodules  Dockerfile  Makefile  dune  dune-project  flake.nix  solver-service-api.opam  solver-service.opam  solver-service.opam.template  test.sh
api/: dune  raw.ml  solver.ml
examples/: dune  main.ml  submit.ml
service/: domain_worker.ml  dune  git_context.ml  git_context.mli  main.ml  opam_repository.ml  opam_repository.mli  pool.ml  service.ml  solver.ml  solver.mli  solver_service.ml  solver_service.mli  stores.ml
stress/: domain_worker.ml  dune  git_context.ml  packages.ml  packages.mli  stress.ml  utils.ml
test/: test.expected  test.ml  utils.ml
worker/: custom.ml  dune  main.ml  solver_worker.ml  solver_worker.mli  worker.ml
